[project]
name = "medconceptsqa-sampling-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.2.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "pyhealth>=1.1.3",
    "rich>=14.2.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
